chore: Update playwright.yml and dependencies, improve artifact upload

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,21 +6,20 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: lts/*
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: PLAYWRIGHT_JUNIT_OUTPUT_NAME=results.xml npx playwright test --reporter=junit
-      shell: bash
-    - name: Test Summary
-      uses: test-summary/action@v2
-      with:
-        paths: |
-          results.xml
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
       if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
  
