chore: Update playwright.yml and dependencies, improve artifact upload

--- a/.github/workflows/playwright-sharding.yml
+++ b/.github/workflows/playwright-sharding.yml
@@ -14,10 +14,10 @@ jobs:
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: lts/*
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright browsers
@@ -40,13 +40,13 @@ jobs:
  
      runs-on: ubuntu-latest
      steps:
-     - uses: actions/checkout@v3
-     - uses: actions/setup-node@v3
+     - uses: actions/checkout@v4
+     - uses: actions/setup-node@v4
        with:
-         node-version: 18
+        node-version: lts/*
      - name: Install dependencies
        run: npm ci
- 
+
      - name: Download blob reports from GitHub Actions Artifacts
        uses: actions/download-artifact@v4
        with:
