chore: Update playwright.yml and dependencies, improve artifact upload

--- a/.github/workflows/playwright-sharding.yml
+++ b/.github/workflows/playwright-sharding.yml
@@ -1,9 +1,10 @@
 name: Playwright Tests Sharding
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  #   branches: [ main, master ]
 jobs:
   playwright-tests:
     timeout-minutes: 60
