--- a/.github/workflows/playwright-sharding.yml
+++ b/.github/workflows/playwright-sharding.yml
@@ -31,8 +31,8 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: blob-report-${{ matrix.shardIndex }}
-        path: blob-report
+        name: playwright-report-${{ matrix.shardIndex }}
+        path: playwright-report/
         retention-days: 1
   merge-reports:
      # Merge reports after playwright-tests, even if some shards have failed
