chore: Update playwright-sharding.yml to use playwright-report-* pattern for artifact download

--- a/.github/workflows/playwright-sharding.yml
+++ b/.github/workflows/playwright-sharding.yml
@@ -51,8 +51,8 @@ jobs:
      - name: Download blob reports from GitHub Actions Artifacts
        uses: actions/download-artifact@v4
        with:
-         path: all-blob-reports
-         pattern: blob-report-*
+        #  path: all-blob-reports
+         pattern: playwright-report-*
          merge-multiple: true
  
      - name: Merge into HTML Report
