--- a/.github/workflows/playwright-sharding.yml
+++ b/.github/workflows/playwright-sharding.yml
@@ -51,16 +51,16 @@ jobs:
      - name: Download blob reports from GitHub Actions Artifacts
        uses: actions/download-artifact@v4
        with:
-        #  path: all-blob-reports
+         path: all-reports
          pattern: playwright-report-*
          merge-multiple: true
  
      - name: Merge into HTML Report
-       run: npx playwright merge-reports --reporter html ./all-blob-reports 
+       run: npx playwright merge-reports --reporter html ./all-reports
  
      - name: Upload HTML report
        uses: actions/upload-artifact@v4
        with:
          name: html-report--attempt-${{ github.run_attempt }}
-         path: playwright-report
-         retention-days: 14
+         path: playwright-report/
+         retention-days: 1
