--- a/.github/workflows/playwright-sharding.yml
+++ b/.github/workflows/playwright-sharding.yml
@@ -31,8 +31,8 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: playwright-report-${{ matrix.shardIndex }}
-        path: playwright-report/
+        name: blob-report-${{ matrix.shardIndex }}
+        path: blob-report
         retention-days: 1
   merge-reports:
      # Merge reports after playwright-tests, even if some shards have failed
@@ -51,16 +51,16 @@ jobs:
      - name: Download blob reports from GitHub Actions Artifacts
        uses: actions/download-artifact@v4
        with:
-         path: all-reports
-         pattern: playwright-report-*
-         merge-multiple: true
+        path: all-blob-reports
+        pattern: blob-report-*
+        merge-multiple: true
  
      - name: Merge into HTML Report
-       run: npx playwright merge-reports --reporter html ./all-reports
+       run: npx playwright merge-reports --reporter html ./all-blob-reports 
  
      - name: Upload HTML report
        uses: actions/upload-artifact@v4
        with:
          name: html-report--attempt-${{ github.run_attempt }}
          path: playwright-report/
-         retention-days: 1
+         retention-days: 14
