--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -7,29 +7,23 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: Install dependencies
-      working-directory: . # update accordingly
-      run: |
-        npm ci
-        npm install --save dotenv       
-      
-    - name: Run Playwright tests
-      working-directory: . # update accordingly
-      env:
-        # Access token and regional endpoint for Microsoft Playwright Testing
-        PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
-        PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
-        PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
-      run: npx playwright test -c playwright.service.config.ts --workers=20
+      - name: Install dependencies
+        # working-directory: path/to/playwright/folder # update accordingly
+        run: npm ci
     
-    - name: Upload Playwright report
-      uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: ./playwright-report/ # update accordingly
-        retention-days: 10
+      - name: Run Playwright tests
+        # working-directory: path/to/playwright/folder # update accordingly
+        env:
+          # Access token and regional endpoint for Microsoft Playwright Testing
+          PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
+          PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
+          PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
+        run: npx playwright test -c playwright.service.config.ts --workers=20
+    
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: path/to/playwright/folder/playwright-report/ # update accordingly
+          retention-days: 10
