--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -7,6 +7,10 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
       - name: Install dependencies
         # working-directory: path/to/playwright/folder # update accordingly
         run: npm ci
