--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -31,3 +31,7 @@ jobs:
           name: playwright-report
           path: ./playwright-report/ # update accordingly
           retention-days: 10
+
+      - name: list files
+        run: ls -R
+      
