chore: Ignore playwright.service_test.ps1 in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ node_modules/
 web/tests/cartTest.spec.ts
 playwright.service.config.secrets.ps1
 playwright.service.ps1
+playwright.service_test.ps1
