--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   },
   "homepage": "https://github.com/rmoreirao/playwright-ui-poc#readme",
   "devDependencies": {
-    "@playwright/test": "^1.44.0",
+    "@azure/microsoft-playwright-testing": "^1.0.0-beta.3",
+    "@playwright/test": "^1.47.0",
     "@types/node": "^20.10.5",
     "dotenv": "^16.4.3"
   },
   "dependencies": {
     "@axe-core/playwright": "^4.9.1",
-    "playwright": "^1.44.0"
+    "playwright": "^1.47.0"
   }
 }
