--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -11,6 +11,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+
+      - name: Login to Azure with AzPowershell (enableAzPSSession true) 
+        uses: azure/login@v2 
+        with: 
+          client-id: ${{ secrets.AZURE_CLIENT_ID }} 
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}  
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}  
+          enable-AzPSSession: true 
+          
       - name: Install dependencies
         # working-directory: path/to/playwright/folder # update accordingly
         run: npm ci
@@ -22,7 +31,7 @@ jobs:
           PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
           PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
           PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
-        run: npx playwright test -c playwright.service.config.ts --workers=20 --reporter=html
+        run: npx playwright test -c playwright.service.config.ts --workers=20
     
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
