--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -1,7 +1,10 @@
 name: Microsoft Playwright Tests in Azure
 on:
-  workflow_dispatch:
-     
+    workflow_dispatch:
+    
+    push:
+      branches:
+        - main
 jobs:
   test:
     timeout-minutes: 60
@@ -19,7 +22,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}  
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}  
           enable-AzPSSession: true 
-          
+
       - name: Install dependencies
         # working-directory: path/to/playwright/folder # update accordingly
         run: npm ci
