--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -5,6 +5,11 @@ on:
     push:
       branches:
         - main
+
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   test:
     timeout-minutes: 60
