--- a/.github/workflows/msplaywright.yml
+++ b/.github/workflows/msplaywright.yml
@@ -39,7 +39,7 @@ jobs:
           PLAYWRIGHT_SERVICE_ACCESS_TOKEN: ${{ secrets.PLAYWRIGHT_SERVICE_ACCESS_TOKEN }}
           PLAYWRIGHT_SERVICE_URL: ${{ secrets.PLAYWRIGHT_SERVICE_URL }}
           PLAYWRIGHT_SERVICE_RUN_ID: ${{ github.run_id }}-${{ github.run_attempt }}-${{ github.sha }}
-        run: npx playwright test -c playwright.service.config.ts --workers=20  --reporter=html
+        run: npx playwright test -c playwright.service.config.ts --workers=20 
     
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
